; ModuleID = '/home/carl/AnghaBench/php-src/ext/pcre/extr_php_pcre.c_php_pcre_shutdown_pcre2.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/pcre/extr_php_pcre.c_php_pcre_shutdown_pcre2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gctx = common dso_local global i32* null, align 8
@cctx = common dso_local global i32* null, align 8
@mctx = common dso_local global i32* null, align 8
@mdata = common dso_local global i32* null, align 8
@pcre2_init_ok = common dso_local global i64 0, align 8
@jit_stack = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @php_pcre_shutdown_pcre2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @php_pcre_shutdown_pcre2() #0 {
  %1 = load i32*, i32** @gctx, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32*, i32** @gctx, align 8
  %5 = call i32 @pcre2_general_context_free(i32* %4)
  store i32* null, i32** @gctx, align 8
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i32*, i32** @cctx, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %6
  %10 = load i32*, i32** @cctx, align 8
  %11 = call i32 @pcre2_compile_context_free(i32* %10)
  store i32* null, i32** @cctx, align 8
  br label %12

12:                                               ; preds = %9, %6
  %13 = load i32*, i32** @mctx, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %18

15:                                               ; preds = %12
  %16 = load i32*, i32** @mctx, align 8
  %17 = call i32 @pcre2_match_context_free(i32* %16)
  store i32* null, i32** @mctx, align 8
  br label %18

18:                                               ; preds = %15, %12
  %19 = load i32*, i32** @mdata, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %24

21:                                               ; preds = %18
  %22 = load i32*, i32** @mdata, align 8
  %23 = call i32 @pcre2_match_data_free(i32* %22)
  store i32* null, i32** @mdata, align 8
  br label %24

24:                                               ; preds = %21, %18
  store i64 0, i64* @pcre2_init_ok, align 8
  ret void
}

declare dso_local i32 @pcre2_general_context_free(i32*) #1

declare dso_local i32 @pcre2_compile_context_free(i32*) #1

declare dso_local i32 @pcre2_match_context_free(i32*) #1

declare dso_local i32 @pcre2_match_data_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
